--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "generator-toolbox",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Yeoman generator",
   "license": "MIT",
   "main": "app/index.js",
   "repository": "frontend/generator-toolbox",
   "author": {
-    "name": "",
-    "email": "",
     "url": "https://github.com/frontend"
   },
   "scripts": {
@@ -17,7 +15,9 @@
     "app"
   ],
   "keywords": [
-    "yeoman-generator"
+    "yeoman-generator",
+    "generator-toolbox",
+    "fabricator"
   ],
   "dependencies": {
     "yeoman-generator": "^0.19.0",
