--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
     "html5shiv": "3.7.2",
     "respond": "1.4.2",
     "bootstrap-sass": "~3.3.4",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "fabricator": "git@github.com:fbrctr/fabricator.git"
   }
 }
