--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "del": "~1.1.1",
     "fabricator-assemble": "^1.0.2",
     "gulp": "^3.8.11",
+    "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.5.2",
     "gulp-gh-pages": "^0.5.0",
     "gulp-hologram": "^1.2.0",
@@ -27,7 +28,6 @@
     "gulp-uglify": "~1.1.0",
     "gulp-util": "^3.0.4",
     "jshint-stylish": "^1.0.1",
-    "run-sequence": "^1.0.2",
     "run-sequence": "~1.0.2",
     "yargs": "^3.6.0"
   }
