--- a/app/templates/_gulp_config.json
+++ b/app/templates/_gulp_config.json
@@ -1,15 +1,15 @@
 {
   "app": {
     "env": "dev",
-    "basedir": "styleguide",
-    "ghpages": "styleguide"
+    "basedir": "<% if (props.tools.indexOf("Bootstrap") > -1) { %>styleguide<% } else { %>.<% } %>",
+    "ghpages": "<% if (props.tools.indexOf("Bootstrap") > -1) { %>styleguide<% } else { %>.<% } %>"
   },
   "vendors": {
     "css": [
       ""
     ],
     "js": [
-      "bower_components/jquery/dist/jquery.js",
+      "bower_components/jquery/dist/jquery.js"<% if (props.tools.indexOf("Bootstrap") > -1) { %>,
       "bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js",
       "bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js",
       "bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js",
@@ -21,10 +21,10 @@
       "bower_components/bootstrap-sass/assets/javascripts/bootstrap/popover.js",
       "bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js",
       "bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js",
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"
+      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"<% } %>
     ],
-    "fonts": [
-      "bower_components/bootstrap-sass/assets/fonts/bootstrap/*",
+    "fonts": [<% if (props.tools.indexOf("Bootstrap") > -1) { %>
+      "bower_components/bootstrap-sass/assets/fonts/bootstrap/*",<% } %>
       "assets/fonts/*"
     ],
     "polyfills": [
@@ -38,7 +38,7 @@
   "tasks":  "./tasks/",
   "assets": "assets/",
   "build": "build/",
-  "browsers": ["last 2 versions", "safari 5", "ie 8", "ie 9", "ff 27", "opera 12.1"],
+  "browsers": ["last 2 versions", "safari 5", "ie 8", "ie 9", "ff 27", "opera 12.1"]<% if (props.tools.indexOf("Fabricator") > -1) { %>,
   "styleguide": {
     "assets": "bower_components/fabricator/src/assets/fabricator/",
     "layout": "default",
@@ -52,5 +52,5 @@
     "data": "assets/data/**/*.{json,yml}",
     "docs": "assets/docs/**/*.md",
     "dest": "styleguide"
-  }
+  }<% } %>
 }
