--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "fabricator"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.19.0",
     "chalk": "^1.0.0",
+    "slug": "^0.8.0",
+    "yeoman-generator": "^0.19.0",
     "yosay": "^1.0.2"
   },
   "devDependencies": {
