add --skip-install option and add npm start function

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Yeoman generator",
   "license": "MIT",
   "main": "app/index.js",
+  "scripts": {
+    "start": "npm install && bower install && gulp init"
+  },
   "repository": "frontend/generator-toolbox",
   "author": {
     "url": "https://github.com/frontend"
