--- a/app/templates/_gulp_config.json
+++ b/app/templates/_gulp_config.json
@@ -1,15 +1,15 @@
 {
   "app": {
     "env": "dev",
-    "basedir": "<% if (props.tools.indexOf("Bootstrap") > -1) { %>styleguide<% } else { %>.<% } %>",
-    "ghpages": "<% if (props.tools.indexOf("Bootstrap") > -1) { %>styleguide<% } else { %>.<% } %>"
+    "basedir": "<% if (bootstrapSass) { %>styleguide<% } else { %>.<% } %>",
+    "ghpages": "<% if (bootstrapSass) { %>styleguide<% } else { %>.<% } %>"
   },
   "vendors": {
     "css": [
       ""
     ],
     "js": [
-      "bower_components/jquery/dist/jquery.js"<% if (props.tools.indexOf("Bootstrap") > -1) { %>,
+      "bower_components/jquery/dist/jquery.js"<% if (bootstrapSass) { %>,
       "bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js",
       "bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js",
       "bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js",
@@ -23,7 +23,7 @@
       "bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js",
       "bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"<% } %>
     ],
-    "fonts": [<% if (props.tools.indexOf("Bootstrap") > -1) { %>
+    "fonts": [<% if (bootstrapSass) { %>
       "bower_components/bootstrap-sass/assets/fonts/bootstrap/*",<% } %>
       "assets/fonts/*"
     ],
@@ -38,7 +38,7 @@
   "tasks":  "./tasks/",
   "assets": "assets/",
   "build": "build/",
-  "browsers": ["last 2 versions", "safari 5", "ie 8", "ie 9", "ff 27", "opera 12.1"]<% if (props.tools.indexOf("Fabricator") > -1) { %>,
+  "browsers": ["last 2 versions", "safari 5", "ie 8", "ie 9", "ff 27", "opera 12.1"]<% if (fabricator) { %>,
   "styleguide": {
     "assets": "bower_components/fabricator/src/assets/fabricator/",
     "layout": "default",
