add task to minify svgs and optimize images

--- a/app/templates/_gulp_config.json
+++ b/app/templates/_gulp_config.json
@@ -35,6 +35,9 @@
   "images": [
     "assets/img/**/*"
   ],
+  "svg": [
+    "assets/svg/**/*"
+  ],
   "tasks":  "./tasks/",
   "assets": "assets/",
   "build": "build/",
