--- a/.jshintrc
+++ b/.jshintrc
@@ -1,8 +1,9 @@
 {
   "node": true,
+  "browser": true,
   "esnext": true,
   "bitwise": true,
-  "camelcase": true,
+  "camelcase": false,
   "curly": true,
   "eqeqeq": true,
   "immed": true,
@@ -13,5 +14,6 @@
   "quotmark": "single",
   "undef": true,
   "unused": true,
-  "strict": true
+  "strict": true,
+  "jquery": true
 }
