--- a/app/templates/_gulp_config.json
+++ b/app/templates/_gulp_config.json
@@ -40,6 +40,7 @@
   ],
   "tasks":  "./tasks/",
   "assets": "assets/",
+  "iconsFontName": "icons",
   "build": "build/",
   "browsers": ["last 2 versions", "safari 5", "ie 8", "ie 9", "ff 27", "opera 12.1"]<% if (fabricator) { %>,
   "styleguide": {
