add base subgenerator component

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": "https://github.com/frontend"
   },
   "files": [
-    "app"
+    "app",
+    "component"
   ],
   "keywords": [
     "yeoman-generator",
