--- a/app/templates/_gulp_config.json
+++ b/app/templates/_gulp_config.json
@@ -9,27 +9,27 @@
       ""
     ],
     "js": [
-      "bower_components/jquery/dist/jquery.js"<% if (bootstrapSass) { %>,
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/affix.js",
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/alert.js",
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/button.js",
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/carousel.js",
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js",
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js",
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/modal.js",
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js",
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/popover.js",
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js",
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js",
-      "bower_components/bootstrap-sass/assets/javascripts/bootstrap/transition.js"<% } %>
+      "node_modules/jquery/dist/jquery.js"<% if (bootstrapSass) { %>,
+      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/affix.js",
+      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/alert.js",
+      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/button.js",
+      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/carousel.js",
+      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/collapse.js",
+      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js",
+      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/modal.js",
+      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js",
+      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/popover.js",
+      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js",
+      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/tab.js",
+      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/transition.js"<% } %>
     ],
     "fonts": [<% if (bootstrapSass) { %>
-      "bower_components/bootstrap-sass/assets/fonts/bootstrap/*",<% } %>
+      "node_modules/bootstrap-sass/assets/fonts/bootstrap/*",<% } %>
       "<%= assets %>fonts/*"
     ],
     "polyfills": [
-      "bower_components/html5shiv/dist/html5shiv.js",
-      "bower_components/respond/dest/respond.src.js"
+      "node_modules/html5shiv/dist/html5shiv.js",
+      "node_modules/respond.js/dest/respond.src.js"
     ]
   },
   "images": [
@@ -44,7 +44,7 @@
   "build": "<%= build %>",
   "browsers": ["last 2 versions", "safari 5", "ie 8", "ie 9", "ff 27", "opera 12.1"]<% if (fabricator) { %>,
   "styleguide": {
-    "assets": "bower_components/fabricator/src/assets/fabricator/",
+    "assets": "node_modules/fabricator/src/assets/fabricator/",
     "layout": "default",
     "layouts": "<%= assets %>templates/views/layouts/*",
     "layoutIncludes": "<%= assets %>templates/views/layouts/includes/*",
