add pages components instead of mixing it with templates

--- a/app/templates/_gulp_config.json
+++ b/app/templates/_gulp_config.json
@@ -62,6 +62,10 @@
         "organisms": {
           "sortBy": "title",
           "reverse": false
+        },
+        "pages": {
+          "sortBy": "title",
+          "reverse": false
         }
       },
       "layouts": {
