--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   ],
   "dependencies": {
     "chalk": "^1.1.1",
+    "path-exists": "^3.0.0",
+    "rimraf": "^2.5.2",
     "slug": "^0.9.1",
     "yeoman-generator": "^0.22.2",
     "yosay": "^1.1.0"
