fix path to the templates for metalsmith in gulp_config

--- a/app/templates/_gulp_config.json
+++ b/app/templates/_gulp_config.json
@@ -78,7 +78,7 @@
       "layouts": {
         "engine": "swig",
         "default": "default.html.swig",
-        "directory": "assets/templates",
+        "directory": "<%= assets %>templates",
         "rename": true
       },
       "metalsmithinplace": {
