--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "chalk": "^1.1.1",
+    "mkdirp": "^0.5.1",
     "path-exists": "^3.0.0",
     "rimraf": "^2.5.2",
     "slug": "^0.9.1",
