--- a/app/templates/_gulp_config.json
+++ b/app/templates/_gulp_config.json
@@ -7,21 +7,19 @@
   "vendors": {
     "css": [],
     "js": [<% if (bootstrapSass) { %>
-      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/affix.js",
-      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/alert.js",
-      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/button.js",
-      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/carousel.js",
-      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/collapse.js",
-      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/dropdown.js",
-      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/modal.js",
-      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/tooltip.js",
-      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/popover.js",
-      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js",
-      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/tab.js",
-      "node_modules/bootstrap-sass/assets/javascripts/bootstrap/transition.js"<% } %>
+      "node_modules/bootstrap/js/dist/alert.js",
+      "node_modules/bootstrap/js/dist/button.js",
+      "node_modules/bootstrap/js/dist/carousel.js",
+      "node_modules/bootstrap/js/dist/collapse.js",
+      "node_modules/bootstrap/js/dist/dropdown.js",
+      "node_modules/bootstrap/js/dist/modal.js",
+      "node_modules/bootstrap/js/dist/popover.js",
+      "node_modules/bootstrap/js/dist/scrollspy.js",
+      "node_modules/bootstrap/js/dist/tab.js",
+      "node_modules/bootstrap/js/dist/tooltip.js",
+      "node_modules/bootstrap/js/dist/util.js"<% } %>
     ],
-    "fonts": [<% if (bootstrapSass) { %>
-      "node_modules/bootstrap-sass/assets/fonts/bootstrap/*",<% } %>
+    "fonts": [
       "<%= assets %>fonts/*"
     ],
     "polyfills": [
