--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "Yeoman generator",
   "license": "MIT",
   "main": "app/index.js",
+  "engines": {
+    "node": "6.7.0",
+    "npm": "3.10.3"
+  },
   "scripts": {
     "start": "npm install && bower install && gulp init"
   },
