update engines for doc

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "license": "MIT",
   "main": "app/index.js",
   "engines": {
-    "node": "6.7.0",
-    "npm": "3.10.3"
+    "node": ">= 6.7.0"
   },
   "scripts": {
     "start": "npm install && bower install && gulp init"
