--- a/app/templates/_gulp_config.json
+++ b/app/templates/_gulp_config.json
@@ -6,7 +6,7 @@
   },
   "vendors": {
     "css": [],
-    "js": [<% if (bootstrapSass) { %>
+    "js": [<% if (bootstrap) { %>
       "node_modules/bootstrap/js/dist/alert.js",
       "node_modules/bootstrap/js/dist/button.js",
       "node_modules/bootstrap/js/dist/carousel.js",
