--- a/package.json
+++ b/package.json
@@ -2,12 +2,7 @@
   "name": "generator-toolbox",
   "version": "1.0.1",
   "description": "Yeoman generator",
-  "license": "MIT",
-  "main": "app/index.js",
-  "scripts": {
-    "start": "npm install && bower install && gulp init"
-  },
-  "repository": "frontend/generator-toolbox",
+  "homepage": "http://frontend.github.io/toolbox/",
   "author": {
     "url": "https://github.com/frontend"
   },
@@ -16,21 +11,49 @@
     "component",
     "script"
   ],
+  "main": "app/index.js",
   "keywords": [
     "yeoman-generator",
     "generator-toolbox",
-    "fabricator"
+    "fabricator",
+    "yeoman-generator"
   ],
+  "license": "MIT",
+  "scripts": {
+    "start": "yarn && gulp init",
+    "prepublish": "gulp prepublish",
+    "test": "gulp"
+  },
+  "repository": "frontend/generator-toolbox",
   "dependencies": {
-    "chalk": "^1.1.1",
+    "chalk": "^1.1.3",
     "mkdirp": "^0.5.1",
     "path-exists": "^3.0.0",
     "rimraf": "^2.5.2",
     "slug": "^0.9.1",
-    "yeoman-generator": "^0.22.2",
-    "yosay": "^1.1.0"
+    "yeoman-generator": "^1.0.0",
+    "yosay": "^2.0.0"
   },
   "devDependencies": {
-    "mocha": "*"
+    "eslint": "^3.1.1",
+    "eslint-config-xo-space": "^0.16.0",
+    "gulp": "^3.9.0",
+    "gulp-coveralls": "^0.1.0",
+    "gulp-eslint": "^3.0.1",
+    "gulp-exclude-gitignore": "^1.0.0",
+    "gulp-istanbul": "^1.0.0",
+    "gulp-line-ending-corrector": "^1.0.1",
+    "gulp-mocha": "^3.0.1",
+    "gulp-nsp": "^2.1.0",
+    "gulp-plumber": "^1.0.0",
+    "mocha": "*",
+    "yeoman-assert": "^3.0.0",
+    "yeoman-test": "^1.6.0"
+  },
+  "eslintConfig": {
+    "extends": "xo-space",
+    "env": {
+      "mocha": true
+    }
   }
 }
