--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "repository": "frontend/generator-toolbox",
   "dependencies": {
     "chalk": "^1.1.3",
+    "curlrequest": "^1.0.1",
     "mkdirp": "^0.5.1",
     "path-exists": "^3.0.0",
     "rimraf": "^2.5.2",
