--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "path-exists": "^3.0.0",
     "rimraf": "^2.5.2",
     "slug": "^0.9.1",
+    "update-notifier": "^2.2.0",
     "yeoman-generator": "^1.0.0",
     "yosay": "^2.0.0"
   },
