--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "curlrequest": "^1.0.1",
+    "inquirer-autocomplete-prompt": "^0.11.1",
     "mkdirp": "^0.5.1",
+    "node-yaml": "^3.1.1",
+    "path": "^0.12.7",
     "path-exists": "^3.0.0",
     "rimraf": "^2.5.2",
     "slug": "^0.9.1",
